# build-env

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.android  Dockerfile.archlinux  Dockerfile.debian-10  Dockerfile.debian-11  Dockerfile.debian-12  Dockerfile.emscripten  Dockerfile.mingw  Dockerfile.nx  Dockerfile.ubuntu-20.04  Dockerfile.ubuntu-21.04  Dockerfile.ubuntu-22.04  Dockerfile.ubuntu-24.04  README.md  build-cmake.sh  build-llvm.ps1  build-llvm.sh  build-ruby.sh  build.sh  llvm.cmake
.github/workflows/: ci.yml
